--- a/FrontEnd/src/App.css
+++ b/FrontEnd/src/App.css
@@ -19,8 +19,10 @@ body {
   font-family: "Poppins", sans-serif;
 }
 
-.container {
+.myContainer {
   max-width: 1280px;
   margin: auto;
   padding: 0 20px;
 }
+
+
