--- a/Backend/templates/index.html
+++ b/Backend/templates/index.html
@@ -31,6 +31,15 @@
         var blob = null;
 
         startRecordingButton.addEventListener("click", function () {
+             leftchannel = [];
+         rightchannel = [];
+         recorder = null;
+         recordingLength = 0;
+         volume = null;
+         mediaStream = null;
+         sampleRate = 44100;
+         context = null;
+         blob = null;
             // Initialize recorder
             navigator.getUserMedia = navigator.getUserMedia || navigator.webkitGetUserMedia || navigator.mozGetUserMedia || navigator.msGetUserMedia;
             navigator.getUserMedia(
