--- a/Backend/templates/audio_video.html
+++ b/Backend/templates/audio_video.html
@@ -10,8 +10,7 @@
 
     <button id="startRecordingButton">Start recording</button>
     <button id="stopRecordingButton">Stop recording</button>
-    <button id="playButton">Play</button>
-    <button id="downloadButton">Download</button>
+    
 
     <div id="video-container">
         <video id="video" playsinline autoplay></video>
@@ -22,12 +21,11 @@
 
         var ques_index = 0;
         var interview_data = [];
+        var questions = [];
 
         var startRecordingButton = document.getElementById("startRecordingButton");
         var stopRecordingButton = document.getElementById("stopRecordingButton");
-        var playButton = document.getElementById("playButton");
-        var downloadButton = document.getElementById("downloadButton");
-
+        
 
         var leftchannel = [];
         var rightchannel = [];
@@ -40,6 +38,11 @@
         var blob = null;
 
         startRecordingButton.addEventListener("click", function () {
+            start_recording();
+        });
+        
+        function start_recording(){
+            
             // Initialize recorder
             navigator.getUserMedia = navigator.getUserMedia || navigator.webkitGetUserMedia || navigator.mozGetUserMedia || navigator.msGetUserMedia;
             navigator.getUserMedia(
@@ -80,10 +83,16 @@
                         function (e) {
                             console.error(e);
                         });
-        });
+                    }
+        
 
         stopRecordingButton.addEventListener("click", function () {
 
+            send_recording();
+     
+        });
+
+        function send_recording(){
             // stop recording
             recorder.disconnect(context.destination);
             mediaStream.disconnect(recorder);
@@ -128,15 +137,13 @@
             // our final blob
             blob = new Blob([view], { type: 'audio/wav' });
             
-
-            // tep code
+            send_audio_for_transcription(blob);
+    }
         
-
+    function send_audio_for_transcription(blob){
         const formData = new FormData();
         formData.append('audio', blob, 'recording.webm');
         //formData.append('audio', audioBlob, 'recording.ogg');
-
-
        
         console.log(formData);
         fetch('/transcribe', {
@@ -151,34 +158,8 @@
         .catch(error => {
           console.error('Error uploading audio:', error);
         });
-        });
-
-        playButton.addEventListener("click", function () {
-            if (blob == null) {
-                return;
-            }
-
-            var url = window.URL.createObjectURL(blob);
-            var audio = new Audio(url);
-            audio.play();
-        });
-
-        downloadButton.addEventListener("click", function () {
-            if (blob == null) {
-                return;
-            }
-
-            var url = URL.createObjectURL(blob);
-
-            var a = document.createElement("a");
-            document.body.appendChild(a);
-            a.style = "display: none";
-            a.href = url;
-            a.download = "sample.wav";
-            a.click();
-            window.URL.revokeObjectURL(url);
-        });
-
+    }
+        
         function flattenArray(channelBuffer, recordingLength) {
             var result = new Float32Array(recordingLength);
             var offset = 0;
