--- a/Backend/templates/audio_video.html
+++ b/Backend/templates/audio_video.html
@@ -17,9 +17,19 @@
         <button id="snapshot-btn">Take Snapshot</button>
     </div>
 
+    <div>
+        <p id="question-display-box">Question here</p>
+
+    </div>
+    <button type="button" id="select-genre" onClick="select_topics_and_get_questions();" style="display:block;">Next</button>
+    <button type="button" id="start-interview" onClick="start_interview();" style="display:block;">Start Interview</button>
+    
+    <button type="button" id="next-ques" onClick="next_question();" style="display:block;">Next</button>
+    <button type="button" id="interview-submit" onclick = "submit_interview();" style="display:none;">Submit</button>
+
     <script>
         var server_url = '';
-        var ques_index = 0;
+        var ques_index = -1;
         var interview_data = [];
         var questions = [];
 
@@ -36,6 +46,7 @@
         var sampleRate = 44100;
         var context = null;
         var blob = null;
+        var questions_num = 0;
 
         startRecordingButton.addEventListener("click", function () {
             start_recording();
@@ -85,14 +96,9 @@
                         });
                     }
         
+                    
 
-        stopRecordingButton.addEventListener("click", function () {
-
-            send_recording();
-     
-        });
-
-        function send_recording(){
+        function send_recording(qno){
             // stop recording
             recorder.disconnect(context.destination);
             mediaStream.disconnect(recorder);
@@ -137,12 +143,13 @@
             // our final blob
             blob = new Blob([view], { type: 'audio/wav' });
             
-            send_audio_for_transcription(blob);
+            send_audio_for_transcription(blob, qno);
     }
         
-    function send_audio_for_transcription(blob){
+    function send_audio_for_transcription(blob, qno){
         const formData = new FormData();
         formData.append('audio', blob, 'recording.webm');
+        formData.append('qno', qno);
         //formData.append('audio', audioBlob, 'recording.ogg');
        
         console.log(formData);
@@ -153,7 +160,8 @@
         .then(response => response.json())
         .then(data => {
           console.log('Audio uploaded successfully:', data);
-          audioPlayer.src = data.url; // Assuming the server responds with the URL of the uploaded audio file
+
+          interview_data[parseInt(data['qno'])]['transcription'] = data['transcript'];
         })
         .catch(error => {
           console.error('Error uploading audio:', error);
@@ -205,11 +213,7 @@
                 console.error('Error accessing webcam:', error);
             });
 
-        // Capture snapshot on button click
-        snapshotBtn.addEventListener('click', () => {
-            send_video_snap();
-        });
-        
+                
         function send_video_snap(){
             const canvas = document.createElement('canvas');
             canvas.width = video.videoWidth;
@@ -229,8 +233,9 @@
                 .then(response => response.json())
                 .then(data => 
                 {
+                    console.log(data);
                     if(data){
-                        if(data['confidence']){
+                        if(data['confidence'] != null || data['confidence'] != undefined){
                             if(interview_data[ques_index]){
                                 interview_data[ques_index]['video_confidence'].push(data.confidence);
                             }
@@ -255,24 +260,37 @@
         }
         
         function init_question(q_index){
-
+            
             interview_data[q_index] = {
-                "question" : questions[q_index]
+                "question" : questions[q_index]['question'],
                 "video_confidence" : [],
                 "transcription" : ""
             };
             
 
             // show the question using inner html
+            document.querySelectorAll('#question-display-box')[0].innerHTML = questions[q_index]['question'];
         }
 
         function next_question(){
-            
+            if(ques_index < questions_num-1){
+                // so that recording is not send for 0th ques
+                if(ques_index != -1){
+                    send_recording(ques_index);
+                }
+                start_recording();
+                
 
-            ques_index+=1;
+                ques_index+=1;
 
-            init_question(ques_index);
-            
+                init_question(ques_index);
+            }
+            if(ques_index >= questions_num-1){
+                //hide next button and show submit button
+                document.querySelectorAll('#next-ques')[0].style.display = 'none';
+                document.querySelectorAll('#next-ques')[0].disable = true;
+                document.querySelectorAll('#interview-submit')[0].style.display = 'block';
+            }
 
         }
 
@@ -283,13 +301,13 @@
             // Set interval to call the function every 5 seconds
             let video_interval = setInterval(send_video_snap, 5000);
             
-
+            next_question();
         }
 
         function select_topics_and_get_questions(){
             // pass topic in below function
             fetch_questions('DSA');
-
+            
             ///  chnage screen to a page showing a start interview page
 
         }
@@ -300,7 +318,7 @@
                 'topic':topic
             };
 
-        fetch(server_url+'/get_questions', {
+        fetch(server_url+'/api/get_questions', {
             method: 'POST', 
             headers: {
                 'Content-Type': 'application/json', // Specify content type as JSON
@@ -310,14 +328,39 @@
             .then(response => response.json())
             .then(data => {
                 console.log(data);
-                questions = data;
-            
+                questions = data['questions'];
+                questions_num = data['questions'].length;
             })
             .catch(error => {
                 console.error('Error getting questions:', error);
             });
 
         }
+    
+        
+        function submit_interview(){
+            var payload = interview_data;
+
+        fetch(server_url+'/api/submit_interview', {
+            method: 'POST', 
+            headers: {
+                'Content-Type': 'application/json', // Specify content type as JSON
+            },
+            body: JSON.stringify(payload)
+            })
+            .then(response => response.json())
+            .then(data => {
+                console.log(data);
+                questions = data['questions'];
+                questions_num = data['questions'].length;
+            })
+            .catch(error => {
+                console.error('Error getting questions:', error);
+            });
+
+        }
+    
+    
     </script>
 </body>
 </html>
